# Novig-assigment

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
core/: __init__.py  app.py  config.py  models.py  race_engine.py  race_manager.py  routes.py  seeding.py
core/logic/: __init__.py  gameplay.py  scheduling.py
demo/: replica_demo.py
replica/: __init__.py  app.py  config.py  routes.py  state_store.py  subscriber.py
