[project]
name = "novig-assignment"
version = "0.1.0"
description = "Horse racing simulation with Core/Replica architecture"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coolname>=4.0.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.0",
    "httpx-sse>=0.4.3",
    "pydantic>=2.12.5",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pylint>=4.0.5",
]
